fix item alignment in userprofile

--- a/src/components/UserWalletTables/styles.module.scss
+++ b/src/components/UserWalletTables/styles.module.scss
@@ -66,7 +66,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: right;
+      justify-content: flex-end;
     }
     .messageTranform {
       text-transform: capitalize;
@@ -75,7 +75,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: right;
+      justify-content: flex-end;
       text-align: right;
     }
     &.isVisible {
